--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,11 @@
        * element that contains the map. */
        #map {
         height: 600px;
-        width: 70%;
+        /* width: 70%; */
         align: center;
+        border-radius: 10px;
+        margin-left: 25px;
+        border: 4px solid #918151;
       }
       /* Optional: Makes the sample page fill the window. */
       html, body {
@@ -126,3 +129,80 @@ body {
   background-color: white;
 }
 
+.btn {
+  margin-top: 10px;
+  margin-left: 5px;
+}
+#user-area {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  left: 10px;
+  top: 22px;
+  width: 100%;
+  right: 0;
+  padding-left: 10px;
+  justify-content: flex-end;
+  padding-right: 10px;
+}
+/* .mdl-textfield__label:after {
+  background-color: #0288D1;
+}
+.mdl-textfield--floating-label.is-focused .mdl-textfield__label {
+  color: #0288D1;
+} */
+.mdl-button .material-icons {
+  top: -1px;
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
+#weather-box {
+  border: 4px solid #918151;
+  border-radius: 10px;
+  margin-left: 25px;
+  background: lightblue;
+  color: white;
+  height: fit-content;
+  padding-top: 4px;
+}
+.input-box {
+  background: none;
+  border: 1px solid;
+}
+p {
+  font-size: 20px;
+  line-height: 20px;
+}
+.material-icons {
+  font-size: 36px;
+  top: 8px;
+  position: relative;
+}
+#user-area #user-pic {
+  top: -3px;
+  position: relative;
+  display: inline-block;
+  background-image: url('/images/profile_placeholder.png');
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+  background-size: 40px;
+  border-radius: 20px;
+}
+#user-area #user-name {
+  font-size: 16px;
+  line-height: 36px;
+  padding-right: 10px;
+  padding-left: 20px;
+  text-align: center;
+  color: white;
+  background-color: #536dfe;
+}
+#user-area #user-pic {
+  top: 2px;
+  width: 33px;
+  height: 33px;
+  background-size: 33px;
+  border-radius: 20px;
+}
