--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,156 @@
+
+
+     .opening-container{
+
+       width:100%;
+         height:200%;
+         text-align:center;
+         background: rgb(83, 153, 196);
+         /* -webkit-animation: fadeinout 4s linear forwards; */
+         animation: fadeinout 4s linear forwards;
+         position: absolute;
+         top: -100px;
+         z-index: 999;
+         font-size: 150px;
+         font-family: 'Noticia Text', serif;
+         text-align: center;
+         color:white;
+
+     }
+
+     #logo{
+       padding-top:200px;
+     }
+
+
+     @-webkit-keyframes fadeinout {
+       100% { opacity: 0; }
+       50% { opacity: 1; }
+     }
+
+     @keyframes fadeinout {
+       100% { opacity: 0; }
+       50% { opacity: 1; }
+     }
+
+     @-webkit-keyframes bounceInDown {
+       from,
+       60%,
+       75%,
+       90%,
+       to {
+         -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+         animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+       }
+
+       0% {
+         opacity: 0;
+         -webkit-transform: translate3d(0, -3000px, 0);
+         transform: translate3d(0, -3000px, 0);
+       }
+
+       60% {
+         opacity: 1;
+         -webkit-transform: translate3d(0, 25px, 0);
+         transform: translate3d(0, 25px, 0);
+       }
+
+       75% {
+         -webkit-transform: translate3d(0, -10px, 0);
+         transform: translate3d(0, -10px, 0);
+       }
+
+       90% {
+         -webkit-transform: translate3d(0, 5px, 0);
+         transform: translate3d(0, 5px, 0);
+       }
+
+       to {
+         -webkit-transform: translate3d(0, 0, 0);
+         transform: translate3d(0, 0, 0);
+       }
+     }
+
+     @keyframes bounceInDown {
+       from,
+       60%,
+       75%,
+       90%,
+       to {
+         -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+         animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+       }
+
+       0% {
+         opacity: 0;
+         -webkit-transform: translate3d(0, -3000px, 0);
+         transform: translate3d(0, -3000px, 0);
+       }
+
+       60% {
+         opacity: 1;
+         -webkit-transform: translate3d(0, 25px, 0);
+         transform: translate3d(0, 25px, 0);
+       }
+
+       75% {
+         -webkit-transform: translate3d(0, -10px, 0);
+         transform: translate3d(0, -10px, 0);
+       }
+
+       90% {
+         -webkit-transform: translate3d(0, 5px, 0);
+         transform: translate3d(0, 5px, 0);
+       }
+
+       to {
+         -webkit-transform: translate3d(0, 0, 0);
+         transform: translate3d(0, 0, 0);
+       }
+     }
+
+     .bounceInDown {
+       -webkit-animation-name: bounceInDown;
+       animation-name: bounceInDown;
+     }
+
+     @-webkit-keyframes bounceInLeft {
+       from,
+       60%,
+       75%,
+       90%,
+       to {
+         -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+         animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+       }
+
+       0% {
+         opacity: 0;
+         -webkit-transform: translate3d(-3000px, 0, 0);
+         transform: translate3d(-3000px, 0, 0);
+       }
+
+       60% {
+         opacity: 1;
+         -webkit-transform: translate3d(25px, 0, 0);
+         transform: translate3d(25px, 0, 0);
+       }
+
+       75% {
+         -webkit-transform: translate3d(-10px, 0, 0);
+         transform: translate3d(-10px, 0, 0);
+       }
+
+       90% {
+         -webkit-transform: translate3d(5px, 0, 0);
+         transform: translate3d(5px, 0, 0);
+       }
+
+       to {
+         -webkit-transform: translate3d(0, 0, 0);
+         transform: translate3d(0, 0, 0);
+       }
+     }
      /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
        #map {
@@ -15,7 +168,7 @@
         padding: 0;
       }
       #right-panel {
-        font-family: 'Roboto','sans-serif';
+        font-family: 'Open Sans Condensed', sans-serif;
         line-height: 30px;
         padding-left: 10px;
       }
@@ -62,7 +215,7 @@
 #origin-input,
 #destination-input {
   background-color: #fff;
-  font-family: Roboto;
+  font-family: 'Open Sans Condensed', sans-serif;
   font-size: 15px;
   font-weight: 300;
   margin-left: 12px;
@@ -84,7 +237,7 @@
 }
 
 #mode-selector label {
-  font-family: Roboto;
+  font-family:'Open Sans Condensed', sans-serif;
   font-size: 13px;
   font-weight: 300;
 
@@ -161,10 +314,11 @@ body {
   border: 4px solid #918151;
   border-radius: 10px;
   margin-left: 25px;
-  background: lightblue;
-  color: white;
+  background: rgb(196, 222, 238);
+  color: rgb(83, 153, 196);
   height: fit-content;
   padding-top: 4px;
+  font-family:'Open Sans Condensed', sans-serif;
 }
 .input-box {
   background: none;
