--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,176 +1,23 @@
-
-
-     .opening-container{
-
-       width:100%;
-         height:200%;
-         text-align:center;
-         background: rgb(83, 153, 196);
-         /* -webkit-animation: fadeinout 4s linear forwards; */
-         animation: fadeinout 4s linear forwards;
-         position: absolute;
-         top: -100px;
-         z-index: 999;
-         font-size: 150px;
-         font-family: 'Noticia Text', serif;
-         text-align: center;
-         color:white;
-
-     }
-
-     #logo{
-       padding-top:200px;
-     }
-
-
-     @-webkit-keyframes fadeinout {
-       100% { opacity: 0; }
-       50% { opacity: 1; }
-     }
-
-     @keyframes fadeinout {
-       100% { opacity: 0; }
-       50% { opacity: 1; }
-     }
-
-     @-webkit-keyframes bounceInDown {
-       from,
-       60%,
-       75%,
-       90%,
-       to {
-         -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-         animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-       }
-
-       0% {
-         opacity: 0;
-         -webkit-transform: translate3d(0, -3000px, 0);
-         transform: translate3d(0, -3000px, 0);
-       }
-
-       60% {
-         opacity: 1;
-         -webkit-transform: translate3d(0, 25px, 0);
-         transform: translate3d(0, 25px, 0);
-       }
-
-       75% {
-         -webkit-transform: translate3d(0, -10px, 0);
-         transform: translate3d(0, -10px, 0);
-       }
-
-       90% {
-         -webkit-transform: translate3d(0, 5px, 0);
-         transform: translate3d(0, 5px, 0);
-       }
-
-       to {
-         -webkit-transform: translate3d(0, 0, 0);
-         transform: translate3d(0, 0, 0);
-       }
-     }
-
-     @keyframes bounceInDown {
-       from,
-       60%,
-       75%,
-       90%,
-       to {
-         -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-         animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-       }
-
-       0% {
-         opacity: 0;
-         -webkit-transform: translate3d(0, -3000px, 0);
-         transform: translate3d(0, -3000px, 0);
-       }
-
-       60% {
-         opacity: 1;
-         -webkit-transform: translate3d(0, 25px, 0);
-         transform: translate3d(0, 25px, 0);
-       }
-
-       75% {
-         -webkit-transform: translate3d(0, -10px, 0);
-         transform: translate3d(0, -10px, 0);
-       }
-
-       90% {
-         -webkit-transform: translate3d(0, 5px, 0);
-         transform: translate3d(0, 5px, 0);
-       }
-
-       to {
-         -webkit-transform: translate3d(0, 0, 0);
-         transform: translate3d(0, 0, 0);
-       }
-     }
-
-     .bounceInDown {
-       -webkit-animation-name: bounceInDown;
-       animation-name: bounceInDown;
-     }
-
-     @-webkit-keyframes bounceInLeft {
-       from,
-       60%,
-       75%,
-       90%,
-       to {
-         -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-         animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-       }
-
-       0% {
-         opacity: 0;
-         -webkit-transform: translate3d(-3000px, 0, 0);
-         transform: translate3d(-3000px, 0, 0);
-       }
-
-       60% {
-         opacity: 1;
-         -webkit-transform: translate3d(25px, 0, 0);
-         transform: translate3d(25px, 0, 0);
-       }
-
-       75% {
-         -webkit-transform: translate3d(-10px, 0, 0);
-         transform: translate3d(-10px, 0, 0);
-       }
-
-       90% {
-         -webkit-transform: translate3d(5px, 0, 0);
-         transform: translate3d(5px, 0, 0);
-       }
-
-       to {
-         -webkit-transform: translate3d(0, 0, 0);
-         transform: translate3d(0, 0, 0);
-       }
-     }
      /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
        #map {
         height: 600px;
-        /* width: 70%; */
         align: center;
         border-radius: 10px;
         margin-left: 25px;
         border: 4px solid #918151;
       }
-      /* Optional: Makes the sample page fill the window. */
+
       html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
       #right-panel {
-        font-family: 'Open Sans Condensed', sans-serif;
+        font-family: 'Roboto','sans-serif';
         line-height: 30px;
         padding-left: 10px;
+        border-radius: 10px;
       }
 
       #right-panel select, #right-panel input {
@@ -215,7 +62,7 @@
 #origin-input,
 #destination-input {
   background-color: #fff;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: Roboto;
   font-size: 15px;
   font-weight: 300;
   margin-left: 12px;
@@ -237,7 +84,7 @@
 }
 
 #mode-selector label {
-  font-family:'Open Sans Condensed', sans-serif;
+  font-family: Roboto;
   font-size: 13px;
   font-weight: 300;
 
@@ -245,24 +92,20 @@
 
 body {
   background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/aNKqAFb/green-grass-under-rays-of-sun-closeup-shallow-dof-raw-video-record_spgnoeh2x__F0000.png");
-  /* Full height */
-  width: 100%;
-
-  /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-attachment: fixed;
+}
+
+header {
+  background-color: white;
+  width: 100%;
 }
 
 .jumbotron {
   background: url("http://www.blueskyamusements.com/images/site/template/bkg-sky.jpg");
-    /* Full height */
-    width: 100%;
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .display-4 {
@@ -275,6 +118,7 @@ body {
 }
 
 .lead {
+  font-family: 'Noticia Text', serif;
   color: white;
 }
 
@@ -314,11 +158,10 @@ body {
   border: 4px solid #918151;
   border-radius: 10px;
   margin-left: 25px;
-  background: rgb(196, 222, 238);
-  color: rgb(83, 153, 196);
+  background: lightblue;
+  color: white;
   height: fit-content;
   padding-top: 4px;
-  font-family:'Open Sans Condensed', sans-serif;
 }
 .input-box {
   background: none;
@@ -359,4 +202,33 @@ p {
   height: 33px;
   background-size: 33px;
   border-radius: 20px;
+}
+
+#parks-view {
+  background-color: white;
+  border-radius: 10px;
+}
+
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0px;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
 }
