--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,7 +149,7 @@
     }
 
 
-       * element that contains the map. */
+       /* * element that contains the map. */
        #map {
         height: 600px;
         border-radius: 10px;
@@ -302,17 +302,6 @@ header {
   margin-left: 5px;
 }
 
-#weather-box {
-  border: 4px solid #918151;
-  border-radius: 10px;
-  margin-left: 25px;
-  background: rgb(196,222,238);
-  color: rgb(83, 153, 196);
-  height: fit-content;
-  padding-top: 4px;
-  font-family: 'Open Sans Condensed', sans-serif;
-}
-
 .input-box {
   background: none;
   border: 1px solid;
@@ -355,16 +344,23 @@ p {
 }
 
 .row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  margin: 0px;
+  padding: 0px;
+}
+
+.container {
+  padding: 0px;
   margin: 0px;
 }
 
-#states {
+.p {
   font-family: 'Noticia Text', serif;
-  color: white;
+  font-size: 22px;
+  background-color: white;
+}
+
+#parks-view {
+  background-color: white;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -411,7 +407,6 @@ p {
   #weather-box {
     border: 4px solid #918151;
     border-radius: 10px;
-    margin-left: 25px;
     background: rgb(196, 222, 238);
     color: rgb(83, 153, 196);
     height: fit-content;
@@ -419,4 +414,3 @@ p {
     font-family:'Open Sans Condensed', sans-serif;
   }
 }
-
